fix checkboxes shrink & text overflow

--- a/src/modules/shared/components/Inputs/Input.module.scss
+++ b/src/modules/shared/components/Inputs/Input.module.scss
@@ -210,6 +210,7 @@
     position: relative;
     min-height: 20px;
     cursor: pointer;
+    word-break: break-word;
 
     display: flex;
     align-items: center;
@@ -222,6 +223,7 @@
 
         height: 20px;
         width: 20px;
+        min-width: 20px;
         background: rgba(217, 217, 217, 0.15);
         border: 1px solid rgba(0, 228, 242, 0.3);
         border-radius: 2px;
